--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,37 +1,25 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{wang2022automc,
+  title={AutoMC: Automated Model Compression based on Domain Knowledge and Progressive search strategy},
+  author={Wang, Chunnan and Wang, Hongzhi and Shi, Xiangyu},
+  booktitle={2024 IEEE 40th International Conference on Data Engineering (ICDE)},
+  year={2024},
+  organization={IEEE},
+  pdf={https://arxiv.org/pdf/2201.09884},
+  selected={true}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{shi2023audio,
+  title={Audio compression-assisted feature extraction for voice replay attack detection},
+  author={Shi, Xiangyu and Luo, Yuhao and Wang, Li and He, Haorui and Li, Hao and Wang, Lei and Wu, Zhizheng},
+  journal={arXiv preprint arXiv:2310.05813},
+  year={2023},
+  pdf={https://arxiv.org/pdf/2310.05813},
+  selected={true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
@@ -56,7 +44,7 @@
   google_scholar_id={qyhmnyLat1gC},
   video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
+  selected={false}
 }
 
 @article{einstein1905molekularkinetischen,
