--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,3 +19,19 @@
   pdf={https://arxiv.org/pdf/2310.05813},
   selected={true}
 }
+
+@article{10.1145/3676968,
+author = {Wang, Chunnan and Shi, Xiangyu and Wang, Hongzhi},
+title = {Fair Federated Learning with Multi-Objective Hyperparameter Optimization},
+year = {2024},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+issn = {1556-4681},
+url = {https://doi.org/10.1145/3676968},
+doi = {10.1145/3676968},
+journal = {ACM Trans. Knowl. Discov. Data},
+month = {jul},
+keywords = {fair federated learning, hyperparameter optimization, multi-objective optimization},
+selected={true},
+pdf={https://dl.acm.org/doi/pdf/10.1145/3676968}
+}
