Update PDF link for paper in bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   booktitle={2024 IEEE 40th International Conference on Data Engineering (ICDE)},
   year={2024},
   organization={IEEE},
-  pdf={https://arxiv.org/pdf/2201.09884},
+  pdf={https://ieeexplore.ieee.org/document/10598157},
   selected={true}
 }
 
